[gd_scene load_steps=2 format=3 uid="uid://bhftsn5yhlugv"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/facts_popup_content.gd" id="1_x3wnc"]

[node name="FactsPopupContent" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x3wnc")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
text = "yea tbh this doesn't do much atm"

[node name="Facts" type="ItemList" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 93)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="FactInteractionContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ChangeDefaultButton" type="Button" parent="HBoxContainer/VBoxContainer/FactInteractionContainer"]
layout_mode = 2
text = "Change Default"

[node name="CancelChangeDefaultButton" type="Button" parent="HBoxContainer/VBoxContainer/FactInteractionContainer"]
layout_mode = 2
text = "Cancel"

[node name="RenameFactButton" type="Button" parent="HBoxContainer/VBoxContainer/FactInteractionContainer"]
layout_mode = 2
text = "Rename"

[node name="CancelRenameButton" type="Button" parent="HBoxContainer/VBoxContainer/FactInteractionContainer"]
layout_mode = 2
text = "Cancel"

[node name="DeleteFactButton" type="Button" parent="HBoxContainer/VBoxContainer/FactInteractionContainer"]
layout_mode = 2
text = "Delete"

[node name="FactNameLabel" type="Label" parent="HBoxContainer/VBoxContainer/FactInteractionContainer"]
layout_mode = 2

[node name="FactRenameEditContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmRenameButton" type="Button" parent="HBoxContainer/VBoxContainer/FactRenameEditContainer"]
layout_mode = 2
text = "Save"

[node name="NewNameEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/FactRenameEditContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="FactDuplicateLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Fact is already declared."

[node name="ChangeDefaultEditContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="NewDefaultCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/ChangeDefaultEditContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2

[node name="NewDefaultSpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer/ChangeDefaultEditContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2

[node name="SaveNewDefaultButton" type="Button" parent="HBoxContainer/VBoxContainer/ChangeDefaultEditContainer"]
layout_mode = 2
text = "Set Default"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="GoToAddressLabel" type="Label" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="GoToAddressButton" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
text = "go to"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
columns = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Pages containing fact:"
text_overrun_behavior = 1

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Lines declaring fact:"
text_overrun_behavior = 1

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Conditionals referencing fact:"
text_overrun_behavior = 1

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Choice Items declaring fact:"
text_overrun_behavior = 1

[node name="Label5" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Choice Items referencing fact as conditional:"
text_overrun_behavior = 1

[node name="RefPagesFact" type="ItemList" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RefLinesFact" type="ItemList" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefLinesCondition" type="ItemList" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefChoicesFact" type="ItemList" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefChoicesCondition" type="ItemList" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmDelete" type="ConfirmationDialog" parent="."]
title = "Delete Fact?"
initial_position = 4
always_on_top = true
popup_window = true
ok_button_text = "Delete Fact (NO UNDO)"

[connection signal="item_clicked" from="Facts" to="." method="_on_facts_item_clicked"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/FactInteractionContainer/ChangeDefaultButton" to="." method="_on_change_default_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/FactInteractionContainer/CancelChangeDefaultButton" to="." method="_on_cancel_change_default_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/FactInteractionContainer/RenameFactButton" to="." method="_on_rename_fact_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/FactInteractionContainer/CancelRenameButton" to="." method="_on_cancel_rename_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/FactInteractionContainer/DeleteFactButton" to="." method="_on_delete_fact_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/FactRenameEditContainer/ConfirmRenameButton" to="." method="_on_confirm_rename_button_pressed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/FactRenameEditContainer/NewNameEdit" to="." method="_on_new_name_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ChangeDefaultEditContainer/SaveNewDefaultButton" to="." method="_on_save_new_default_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/GoToAddressButton" to="." method="_on_go_to_address_button_pressed"]
[connection signal="canceled" from="ConfirmDelete" to="." method="_on_confirm_delete_canceled"]
[connection signal="confirmed" from="ConfirmDelete" to="." method="_on_confirm_delete_confirmed"]
